# gtest_practice

./: .gitignore  CMakeLists.txt  README.md
include/gtest_practice/: sample_class.hpp  sum.hpp
src/: sample_class.cpp  sum.cpp
test/: class_test.cpp  test.cpp
